# ThinkingTrees

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  MIGRATION_SUMMARY.md  README.md  docker-compose.yml  main.py  pyproject.toml  quantize_genrm_cpu_offload.py  quantize_genrm_nvfp4.py  quantize_nemotron_llmcompressor.py  quantize_nemotron_llmcompressor_v2.py  quantize_nemotron_nano_nvfp4.py  quantize_nemotron_nvfp4.py  requirements.txt
.tmp/: plan-body.md
config/: audit.yaml  inference.yaml  settings.yaml  training.yaml
doc/: GLOSSARY.md  OPS_OmniThink_Conversion_Chat.txt  OPTIMIZATION_GUIDE.md  architecture.md  cdx_implementation_plan.md  cdx_implementation_plan_v2.md  cld_implementation_plan.md  cld_implementation_plan_v2.md  gemini_implementation_plan.txt  integration_reality_check.md  oracle_preference_training.md  test_plan.md  testing_documentation.md
docs/: ARTIFACTS.md  optimization_summary.md
experiments/manifesto_rile/: README.md  README_GROUND_TRUTH.md  collect_oracle_preferences.py  collect_preferences.py  collect_preferences_with_ground_truth.py  generate_dpo_data.py  generate_oracle_ground_truth.py  generate_synthetic_data.py  optimize_judge.py  run_batched_experiment.py  run_experiment.py  run_training_pipeline.py  run_with_optimization.py  test_ground_truth_offline.py  test_ground_truth_workflow.sh  test_labeled_tree.py  test_minimal_with_dummy_lm.py  test_optimization.py  test_oracle_approximation.py  train_ops_comparison.py  train_rile_oracle.py  unified_training_pipeline.py  utils.py
outputs/train_20251226_2106/: config.json  final_stats.json
outputs/train_20251227_0508/: config.json
outputs/train_20251227_1941/: config.json  final_stats.json
outputs/train_20251227_run2/: config.json  final_stats.json
outputs/train_20251227_run3/: config.json  final_stats.json
outputs/train_20251227_test/: config.json
outputs/train_20251228_0640/: config.json
scripts/: benchmark_throughput.py  compare_models.sh  quantize_genrm_docker.sh  quantize_nano_docker.sh  run_overnight_test.sh  run_training_pipeline.sh  start_dual_servers.sh  start_oracle_server.sh  start_vllm.sh  start_vllm_inference.sh  start_vllm_training.sh  stop_small_servers.sh  test_quantized_model.py
src/: __init__.py
src/benchmark/: __init__.py  throughput.py
src/config/: __init__.py  concurrency.py  (+4 more)
(+171 files in other folders)
