[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinking-trees"
version = "0.1.0"
description = "OPS-based document summarization with oracle-aligned training"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ThinkingTrees Contributors"}
]
keywords = ["summarization", "dspy", "llm", "oracle", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "more-itertools>=10.0",
    "dspy>=3.0.0",
    "openai>=1.0.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
vllm = [
    "vllm>=0.12.0",
]
ui = [
    "streamlit>=1.30.0",
    "click>=8.0.0",
]
manifesto = [
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
]
all = [
    "thinking-trees[dev,vllm,ui,manifesto]",
]

[project.scripts]
thinking-trees = "src.main:main"

[project.urls]
Homepage = "https://github.com/thinking-trees/thinking-trees"
Documentation = "https://github.com/thinking-trees/thinking-trees#readme"
Repository = "https://github.com/thinking-trees/thinking-trees"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
